# mctf

./: .gitignore  README.md  TRAIN_EVAL_LOOP.md  config.ini  config_baseline_v1.ini  config_golden_no_fear.ini  config_mlp_golden.ini  env.py  eval.py  main.py  performance_log.md  policy.py  pyproject.toml  read_current_tb.py  read_tb.py  resources  test_ctf.py  train.py  trend_tb.py
old_configs/: config_baseline_v2.ini  config_golden.ini  config_recurrent_v1.ini  config_recurrent_v2.ini  config_recurrent_v3.ini
